src/generator/snapshots/darklua_core__generator__test__readable__snapshots__function_statement__readable_function_statement_empty_with_2_attributes_in_group.snap
---
source: src/generator/mod.rs
expression: generator.into_string()
---
@[native(), deprecated]
function foo() end
