src/generator/snapshots/darklua_core__generator__test__readable__snapshots__function_statement__readable_function_statement_empty_with_attribute_in_group.snap
---
source: src/generator/mod.rs
expression: generator.into_string()
---
@[native()]
function foo() end
