src/generator/snapshots/darklua_core__generator__test__readable__snapshots__function_statement__readable_function_statement_empty_with_one_typed_parameter.snap
---
source: src/generator/mod.rs
expression: generator.into_string()
---
function fn(a: string) end
