src/generator/snapshots/darklua_core__generator__test__readable__snapshots__function_statement__readable_function_statement_empty_with_two_typed_parameters.snap
---
source: src/generator/mod.rs
expression: generator.into_string()
---
function fn(a: string, b: bool) end
