src/generator/snapshots/darklua_core__generator__test__readable__snapshots__function_statement__readable_function_statement_empty_with_variadic_pack_return_type.snap
---
source: src/generator/mod.rs
expression: generator.into_string()
---
function fn(): ...(true|nil) end
